修改header因为css和js变化了

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -22,7 +22,7 @@
 				<p>站点基于nodejs的开发，前端采用bootstrap开发框架，后端用expressjs这个Web应用框架。服务器用的是<a href="https://www.digitalocean.com/?refcode=0f682e48abe3">DigitalOcean</a>。</p> 
 				<br>	
 				<h4>我可以用本站做什么?</h4>
-				<p>您可以在这上面发表文章，心情，已经发表一个你喜欢的链接，站点会自动通过链接获取文章信息。</p> 
+				<p>您可以在这上面发表文章，心情，以及发表一个你喜欢的链接，站点会自动通过链接获取文章信息。</p> 
 				<br>
 				<h4>联系我</h4>
 				<p>有任何问题，请不吝email:caosl_158#sina.com[#换成@]，或者在<a href="http://www.38sr.com/feedback">feedback</a>反馈，我将尽力解决。</p> 
