--- a/views/common/500.ejs
+++ b/views/common/500.ejs
@@ -51,8 +51,8 @@
 <body> 
 	<div class="mainwrap">
 		<div class="am-u-sm-12">
-        <h2 class="am-text-center am-text-xxxl am-margin-top-lg">404. Not Found</h2>
-        <p class="am-text-center">没有找到你要的页面</p>
+        <h2 class="am-text-center am-text-xxxl am-margin-top-lg">500. Server is Sleeping</h2>
+        <p class="am-text-center">服务器开小差了，希望你能把这个BUG报告给我，主页->反馈</p>
         <pre class="page-500">          .----.
        _.'__    `.
    .--($)($$)---/#\
