--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -9,20 +9,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="/images/favicon.ico">   
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />   
-	<link rel="stylesheet" href="/stylesheets/base.min.css">  
-	<link rel="stylesheet" href="/stylesheets/jcrop.min.css">   
-	<link rel="stylesheet" href="/stylesheets/jquery.atwho.min.css"> 
-	<link rel="stylesheet" href="/stylesheets/jquery.qeditor.min.css"> 
-	<link rel="stylesheet" href="/stylesheets/pagesty.min.css"> 
-	<link rel="stylesheet" href="/stylesheets/fancybox.min.css"> 
-	<link rel="stylesheet" href="/stylesheets/jquery.webui-popover.css">  
-	<% if(locals.userinfo){%>	
-		<% if(locals.userinfo.admin == 1){%>	
-			<link rel="stylesheet" href="/stylesheets/admin.min.css"> 
-		<% }%>	
-	<% }%>	
-	<script src="/javascripts/jquery-min.js"></script> 
+	<link rel='stylesheet' href='/stylesheets/build.min.css' /> 
+
+	<script src="/javascripts/lib.min.js"></script> 
+<!--	<script src="/javascripts/jquery.min.js"></script> 
+	<script src="/javascripts/jquery.migrate.min.js"></script>
+	<script src="/javascripts/jquery.jcrop.min.js"></script>  
+	<script src="/javascripts/jquery.atwho.min.js"></script>
+	<script src="/javascripts/jquery.caret.min.js"></script> 
+	<script src="/javascripts/jquery.qeditor.min.js"></script> 
+	<script src="/javascripts/jquery.form.min.js"></script> 
+	<script src="/javascripts/jquery.webui.popover.min.js"></script>   -->
+	<script src="/javascripts/build.min.js"></script>  
+
+<!-- 	<script src="/javascripts/jquery-min.js"></script> 
 	<script src="/javascripts/jquery-migrate-1.2.1.js"></script>
 	<script src="/javascripts/underscore.min.js"></script> 
 	<script src="/javascripts/bootstrap.min.js"></script> 
@@ -35,11 +35,13 @@
 	<script src="/javascripts/fancybox.js"></script> 
 	<script src="/javascripts/jquery.webui-popover.js"></script>  
 	<script src="/javascripts/texiao.min.js"></script>  
+
 	<% if(locals.userinfo){%>	
 		<% if(locals.userinfo.admin == 1){%>	
 			<script src="/javascripts/admin.min.js"></script>  
 		<% }%>	
-	<% }%>	 
+	<% }%>	
+  -->
 
 	<script type="text/javascript">
 	$(document).ready(function(){
