--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -17,7 +17,8 @@
     <div class=" collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="catawrap nav navbar-nav" role="tablist">  
 			<li class="<%= (locals.pageflag==1)?'active':'' %>" %><a href="/">广场</a></li>
-			<li class="<%= (locals.pageflag==2)?'active':'' %>" %><a href="/xinqing">心情</a></li>
+			<li class="<%= (locals.pageflag==2)?'active':'' %>" %><a href="/mood">心情</a></li>
+			<li class="<%= (locals.pageflag==5)?'active':'' %>" %><a href="/article">文章</a></li>
 			<li class="<%= (locals.pageflag==3)?'active':'' %>" %><a href="/fastlink">快链</a></li>
 			<li class="<%= (locals.pageflag==4)?'active':'' %>" %><a href="/xiaohua">笑话</a></li>
 		</ul> 
