--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,5 +1,5 @@
  		<footer class="copyright">
- 			<div id=gotopbtn>
+ 			<div id="gotopbtn">
  				<img border="0" src="/images/scrollup.png" style="height: 35px;width: 35px;">
  			</div> 
 
@@ -16,9 +16,7 @@
 						closeable:true,
 						style:'',
 						padding:false
-				};
-
-				 
+				};				 
  
 				function initPopover(){		  		 
 					var
@@ -59,11 +57,11 @@
 			})();
 			
 		</script>
-
+ 
 			<div>
 				<a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
 				<span class="otherlink">版权所有 © 2014 38SR.COM</span>
-				<a target="_blank" href="https://github.com/ForestCho/38sr" class="otherlink">源码</a>  
+				<a target="_blank" href="https://github.com/ForestCho/nodejs-38sr" class="otherlink">源码</a>  
 				<a href="/about" class="otherlink">关于</a>  
 				<a href="/shijian" class="otherlink">成长线</a>  
 				<a href="/feedback" class="otherlink">反馈</a>   
