--- a/views/userarticle.ejs
+++ b/views/userarticle.ejs
@@ -1,86 +1,93 @@
 <% include partial/header%>
 </head>
 <body>
-	<% include partial/nav %>
-	<div class="mainwrap">	
-		<div class="page_header_info">
-	  			<% if(visituser){ %> 
-			   		<h4>Ta的最近心情</h4>
-			   <% } %>
-		</div>
-		<div class="rightwrap user_rightwrap">
-			<% include partial/sidebar %>
-		</div>
-		<div class="leftwrap ">		
-		   <div class="user_near_article">
-		   		<% 	var nearArticle = d.data;
-		   			for(var i=0;i<nearArticle.length;i++){ %> 
-		   					<div class="articleitem">    
-									<% if(nearArticle[i].classify === 0){%>
-										<div class="msg_date"><i class="fa fa-clock-o"></i><%= nearArticle[i].convertdate  %> 说	 
-									<%}else{%>
-										<div class="msg_date"><i class="fa fa-clock-o"></i><%= nearArticle[i].convertdate  %> 分享来自
-											<%if(nearArticle[i]._sid){%>
-												<a href="#" class="sitetext" data-toggle="tooltip" data-placement="right" title="<%=nearArticle[i]._sid.sbrief %>"><%=nearArticle[i]._sid.sname %></a>
-											<%}else{%>
-												net
-											<%}%>										
-										的快链</span>
-											<%if(nearArticle[i]._sid){%>	 
-												<img class="sitepic" src="<%=nearArticle[i]._sid.spic %>">
-											<%}%>
-									<%}%>
-											<div class="reply">
-												<% if(typeof(locals.userinfo) !== 'undefined' && locals.userinfo.name === visituser){%>	 
-													<a class="deleteitem" data-tid="<%=nearArticle[i].tid %>">
-														<i class="fa fa-trash"></i>
-													</a>
-												<% }%>
-												<% if(locals.userinfo){ %>	
-													<a href="/article/<%= nearArticle[i].tid %>">
-														<i class="fa fa-comment"></i>
-													</a>
-												<% }else{%>
-													<a href="/login?prelink=/article/<%= nearArticle[i].tid %>">
-														<i class="fa fa-comment"></i>
-													</a>
-												<%}%>  
-										</div>
-									</div>
-									<% if(nearArticle[i].classify === 0){%> 
-										 <% if(nearArticle[i].title &&nearArticle[i].title.length > 0 ){%>
-											<p class="item_title"><a href="/article/<%= nearArticle[i].tid %>"><%= nearArticle[i].title %></a></p>
-										 <%}%>
-										<div class="msg_content"><%- nearArticle[i].newcontent %> </div> 
-									<%}else{%>										
-										<p class="item_title"><a href="/redirect?url=<%= nearArticle[i].title %>" target="_blank"><%= nearArticle[i].content %><i class="fa fa-external-link"></i></a></p>	
-									<%}%> 
-								<div class="clearfix"></div> 
-							</div> 
-		  		<% } %>
-		  		<div class="navigator"> 
-			  		 <% if(d.currentpage > 1 ){%>
-			  			<a href="/user/<%= visituser %>/article/?pageid=<%= d.currentpage - 1  %>" class="last_page fade_trans">
-			  				&larr;上一页
-			  			</a>
-			  		<%}%>
-			  		<% if(nearArticle.length > config.index.list_article_size ){%>
-			  			<a href="/user/<%= visituser %>/article/?pageid=<%= d.currentpage - (-1)  %>" class="next_page fade_trans">
-			  				下一页&rarr;
-			  			</a>
-			  		<%}%>
-			  		<div class="page_numwrap">
-			  			<div class="page_num">
-				  			<%
-								var pagesize = config.index.list_article_size;
-								var pagenum = Math.ceil(d.articlenum/pagesize);
-				  			%>
-			  				<%= d.currentpage %>/<%= pagenum %>
-			  			</div>
-			  		</div>
-		  		</div>
-		   </div>
+<% include partial/nav %>
+<div class="mainwrap">
+	<div class="page_header_info">
+		<% if(visituser){ %>
+		<h4>Ta的动态</h4>
+		<% } %>
+	</div>
+	<div class="rightwrap user_rightwrap">
+		<% include partial/sidebar %>
+	</div>
+	<div class="leftwrap ">
+		<div class="user_near_article">
+			<% 	var nearArticle = d.data;
+			for(var i=0;i<nearArticle.length;i++){ %>
+			<div class="articleitem">
+				<% if(nearArticle[i].classify === 0){%>
+				<div class="msg_date"><i class="fa fa-clock-o"></i><%= nearArticle[i].convertdate  %> 说
+				<%}else if(nearArticle[i].classify === 2){%>
+				<div class="msg_date"><i class="fa fa-clock-o"></i><%= nearArticle[i].convertdate  %> 发布一篇
+					<%}else{%>
+					<div class="msg_date"><i class="fa fa-clock-o"></i><%= nearArticle[i].convertdate  %> 分享来自
+						<%if(nearArticle[i]._sid){%>
+						<a href="#" class="sitetext" data-toggle="tooltip" data-placement="right" title="<%=nearArticle[i]._sid.sbrief %>"><%=nearArticle[i]._sid.sname %></a>
+						<%}else{%>
+						net
+						<%}%>
+					的快链</span>
+					<%if(nearArticle[i]._sid){%>
+					<img class="sitepic" src="<%=nearArticle[i]._sid.spic %>">
+					<%}%>
+					<%}%>	
+					<div class="reply">
+						<% if(typeof(locals.userinfo) !== 'undefined' && locals.userinfo.name === visituser){%>
+						<a class="deleteitem" data-tid="<%=nearArticle[i].tid %>">
+							<i class="fa fa-trash"></i>
+						</a>
+						<% }%>
+						<% if(locals.userinfo){ %>
+						<a href="/article/<%= nearArticle[i].tid %>">
+							<i class="fa fa-comment"></i>
+						</a>
+						<% }else{%>
+						<a href="/login?prelink=/article/<%= nearArticle[i].tid %>">
+							<i class="fa fa-comment"></i>
+						</a>
+						<%}%>
+					</div>
+					</div>
+					<% if(nearArticle[i].classify === 0){%>
+					<% if(nearArticle[i].title &&nearArticle[i].title.length > 0 ){%>
+					<p class="item_title"><a href="/article/<%= nearArticle[i].tid %>"><%= nearArticle[i].title %></a></p>
+					<%}%>
+					<div class="msg_content"><%- nearArticle[i].newcontent %> </div>
+					<%}else if(nearArticle[i].classify === 2){%>
+					<% if(nearArticle[i].title &&nearArticle[i].title.length > 0 ){%>
+					<p class="item_title"><a href="/t/<%= nearArticle[i].tid %>"><%= nearArticle[i].title %></a></p>
+					<%}%>
+					<div class="msg_content"><%- nearArticle[i].newcontent %> </div>
+					<%}else{%>
+					<p class="item_title"><a href="/redirect?url=<%= nearArticle[i].title %>" target="_blank"><%= nearArticle[i].content %><i class="fa fa-external-link"></i></a></p>
+					<%}%>
+					<div class="clearfix"></div>
+				</div>
+				<% } %>
+				<div class="navigator">
+					<% if(d.currentpage > 1 ){%>
+					<a href="/user/<%= visituser %>/article/?pageid=<%= d.currentpage - 1  %>" class="last_page fade_trans">
+						&larr;上一页
+					</a>
+					<%}%>
+					<% if(nearArticle.length > config.index.list_article_size ){%>
+					<a href="/user/<%= visituser %>/article/?pageid=<%= d.currentpage - (-1)  %>" class="next_page fade_trans">
+						下一页&rarr;
+					</a>
+					<%}%>
+					<div class="page_numwrap">
+						<div class="page_num">
+							<%
+							var pagesize = config.index.list_article_size;
+							var pagenum = Math.ceil(d.articlenum/pagesize);
+							%>
+							<%= d.currentpage %>/<%= pagenum %>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div style="clear:both"></div>
-	</div>				
-<% include partial/footer %>
+	</div>
+	<% include partial/footer %>
